src/Components/NFTsCardBrowse/index.scss
@import '../../dark.scss';
@import '../../light.scss';
.erc721-img {
  width: 100% !important;
  margin: auto;
  height: 250px;
  object-fit: contain;
}

.sp-between {
  display: flex;
  color: var(--color) !important;
  justify-content: space-between;
}

.card-token {
  background-color: var(--nft-background) !important;
  box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
  border-radius: 1rem !important;
  overflow: hidden;
  transition: box-shadow 0.25s ease, transform 0.25s ease;
}

.card-token .ant-card-meta-description {
  color: var(--color) !important;
}

.content-list-nft .ant-card {
  width: 95%;
  margin: 0 auto;
  border-radius: 5px;
  /* box-shadow: 0px 4px 8px rgb(235 80 134 / 40%); */
}
.content-list-nft .ant-card:hover {
  /* box-shadow: 0px 4px 8px rgb(235 80 134 / 80%); */
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.content-list-nft .ant-card .ant-card-cover {
  padding: 0;
}

.content-list-nft .ant-card .ant-card-cover img {
  height: 20vh;
  margin: 0 auto;
  border-radius: 5px 5px 0 0;
  object-fit: contain;
}

@media (max-width: 992px) {
  .content-list-nft {
    display: block;
  }
}

@media (max-width: 768px) {
  .content-list-nft .ant-card .ant-card-cover img {
    height: 35vh;
  }
}

